# kuavo_opensource

./: CHANGELOG.md  CMakeLists.txt  readme.md
demo/demo_action/: kuavoRobotSDK.py
docs/: base_useage.md  common_utils.md  control_nuc_ros1.md  control_robot_head_ros.md  get_hand_pos_ros.md  h12pro_controller_node_readme.md  keyboard_control_kuavo.md  kuaovo_docker_env.md  question_and_answer.md
lib/DynamixelSDK/src/: dynamixel_interface.h
lib/EC_Master/src/Sharelib/EcMasterDemo/: EcDemoApp.h
lib/hand_sdk/: hand_sdk.h
lib/jodell_claw_driver/include/: jodell_claw_driver.h
lib/ruierman_controller/: ruierman_actuator.h  ruierman_actuator.py
lib/ruiwo_controller/: Setzero.sh  readme.md  ruiwo_actuator.cpp  ruiwo_actuator.h  ruiwo_actuator.py
lib/ruiwo_controller_cxx/include/: ruiwo_actuator.h
lib/xsens_ros_mti_driver/src/: imu_receiver.h  xdainterface.h
models/biped_gen2/: CMakeLists.txt  package.xml
models/biped_gen2.3/launch/: display.launch  gazebo.launch
models/biped_gen2.3/urdf/: NewKuavo.urdf  NewKuavo_all_joint.urdf  Rleg.urdf
models/biped_gen2.3/urdf/修改过后的urdf/: 全身关节.urdf  只有腿部的.urdf  右脚踝.urdf  左脚踝.urdf
models/biped_gen2.3/urdf/原始urdf/: HHH_Kuavo_V2_New.urdf
models/biped_gen2/config/: joint_names_HHH_Kuavo_V2_New.yaml
models/biped_gen2/urdf/: Lleg.urdf  NewKuavo.urdf  NewKuavo_all_joint.urdf
models/biped_gen2/urdf/原始urdf/: HHH_Kuavo_V2_New.csv
models/biped_gen3.2/urdf/: biped_v3.urdf  biped_v3_all_joint.urdf
models/biped_gen3.3/urdf/: biped_v3.urdf  biped_v3_all_joint.urdf
models/biped_gen3.4/urdf/: biped_v3.urdf  biped_v3_all_joint.urdf  biped_v3_arm.urdf  biped_v3_full.urdf
models/biped_gen3.4/urdf copy/: biped_v3.urdf
models/biped_gen3/urdf/: biped_v3.urdf  biped_v3_all_joint.urdf  biped_v3_full.urdf
models/biped_gen4.0/urdf copy/: biped_v3_all_joint.urdf
models/biped_mt-1.0/urdf/: biped_v3.urdf  biped_v3_all_joint.urdf
ros_package/: CMakeLists.txt
ros_package/msg/: robotHandPosition.msg  robotHeadMotionData.msg
ros_package/src/: main.cc
src/: CMakeLists.txt
src/biped_v2/config/kuavo_v2/: kuavo.json
src/biped_v2/config/kuavo_v2.3/: kuavo.json
src/biped_v2/config/kuavo_v3/: kuavo.json
src/biped_v2/config/kuavo_v3.2/: kuavo.json
src/biped_v2/config/kuavo_v3.3/: kuavo.json
src/biped_v2/config/kuavo_v3.4/: kuavo.json  param.csv  pose.csv  pose_hand_arm.csv  pose_hand_arm_airs.csv  pose_hand_arm_ori.csv  pose_hand_arm_zhangli.csv  scene_1.csv  scene_3.csv  scene_4.csv  scene_5.csv  scene_6.csv  scene_7.csv  scene_8.csv  scene_9.csv  welcome.csv
src/biped_v2/config/kuavo_v4.0/: kuavo.json
src/biped_v2/config/kuavo_v4.1/: kuavo.json
src/common/: FSMState.h  RobotErrorTypes.h  lcm_logger.h  lcm_publish.h  robot_state.h  sensor_data.h  utils.h
src/controller/: controller.h
src/demos/stand/src/: StandRobot.cc  StandTrajectory.cc
src/estimator/: state_estimation.h
src/hardware/: hardware_plant.h
src/opensource/: CMakeLists.txt
src/opensource/biped_v2/: HighlyDynamicRobot.cc  HighlyDynamicRobot.h  drake_play_back.cc  main.cc
src/opensource/common/: config.cpp  config.h  env_utils.cc  env_utils.h  git_describe.h
src/opensource/planner/: Trajectory.cc
src/planner/: Interpolator.h  Trajectory.h  plantIK.h
tools/: sync_docs.py  sync_docs.sh
tools/check_tool/: Hardware_tool.py  claw_rs485.py  dynamixel_servo.py  folder_backups.sh
